Revert package and group rename due to maven central requirement.