@@ -6,11 +6,12 @@
 
     <parent>
         <artifactId>modelmapper-spring-boot</artifactId>
-        <groupId>com.github.vaatech.modelmapper</groupId>
+        <groupId>io.github.vaatech.modelmapper</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <name>${project.groupId}:${project.artifactId}</name>
     <artifactId>modelmapper-spring-boot-autoconfigure</artifactId>
 
     <dependencies>
@@ -83,11 +84,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
                 <configuration>
                     <includes>
                         <include>*</include>
                     </includes>
+                    <argLine>-Dmockito.inline.extended=false -XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
         </plugins>
